--- a/index.html
+++ b/index.html
@@ -536,6 +536,23 @@ form > p {
               </li>
             </ul>
           </section>
+          <section>
+            <h3>Naming (BEM, SMACSS, etc.)</h3>
+            <pre><code class="css">/* BEM Methodology */
+.button {
+  border: 1px solid #D5D5D5;
+  font: 700 13px/18px Helvetica, arial;
+}
+
+.button__label {
+  text-transform: uppercase;
+}
+
+.button--state-success {
+  color: #FFF;
+  border-color: #4A993E;
+}</code></pre>
+          </section>
         </section>
       </div>
     </div>
