--- a/index.html
+++ b/index.html
@@ -648,6 +648,28 @@ form > p {
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
           </section>
+          <section>
+            <h4>Naming as an Output:</h4>
+            <ul class="iconlist">
+              <li class="sac good">
+                Strict adherence typically results in perfect specificity
+                handling.<br />Beware the cascade!
+              </li>
+              <li class="man good">Easy to maintain; easy to refactor!</li>
+              <li class="flex good">Easy to use across an application.</li>
+              <li class="flex">
+                May conflict with other naming conventions around an
+                organization or in 3rd party libraries.
+              </li>
+              <li class="dx bad">
+                The DX blows. Naming things is hard! Requires good linting or
+                PRs will be a bad time.
+              </li>
+              <li class="size">
+                It's ok! Class names can get large but Gzip likes repetition.
+              </li>
+            </ul>
+          </section>
         </section>
       </div>
     </div>
