--- a/index.html
+++ b/index.html
@@ -689,7 +689,8 @@ div > .class > p {
                 PRs will be a bad time.
               </li>
               <li class="size">
-                It's ok! Class names can get large but Gzip likes repetition.
+                It's ok size wise! Class names can get large but Gzip likes
+                repetition.
               </li>
             </ul>
           </section>
@@ -769,6 +770,24 @@ const shadow = shadowTarget.attachShadow({ mode: "open" });
 
 // ... attach DOM to shadow ...
 </code></pre>
+          </section>
+          <section>
+            <h4>Scoped as an Output:</h4>
+            <ul class="iconlist">
+              <li class="sac good">Fantastic specificity handling!</li>
+              <li class="man good">Easy to maintain; easy to refactor!</li>
+              <li class="flex good">
+                Easy to use across an application. Plays well with others!
+              </li>
+              <li class="dx good">The DX is really good.</li>
+              <li class="dx">
+                Requires a build or requires JavaScript in the browser.
+              </li>
+              <li class="size">
+                It's not bad size wise! Can be even better than naming
+                conventions!
+              </li>
+            </ul>
           </section>
         </section>
       </div>
