--- a/index.html
+++ b/index.html
@@ -844,8 +844,60 @@ const shadow = shadowTarget.attachShadow({ mode: "open" });
             </ul>
             <img
               src="atomic-demo.gif"
+              alt="Atomizer Demo"
               style="aspect-ratio: 174/83; height: 30vh"
             />
+          </section>
+          <section>
+            <h4>Atomic Frameworks:</h4>
+            <ul style="font-size: 0.7em">
+              <li>
+                Atomic frameworks combine tooling and pre-defined class names
+                together into a single package!
+              </li>
+              <li>
+                <a href="https://tailwindcss.com/">Tailwind CSS</a> is one of
+                the most popular CSS frameworks out there and is built on top of
+                utility class principles.
+              </li>
+              <li>
+                Tailwind has ranked as the leading CSS framework in Satisfaction
+                according to
+                <a
+                  href="https://2021.stateofcss.com/en-US/technologies/css-frameworks"
+                  >State of CSS</a
+                >
+                poll for the past three years though this poll does not compare
+                it to CSS-in-JS tooling.
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h4>Atomic as an Input:</h4>
+            <ul class="iconlist">
+              <li class="man good">Easy to maintain; easy to refactor!</li>
+              <li class="dx bad">
+                Don't write atomic styles. It's hard to maintain manually.
+              </li>
+              <li class="dx">
+                Theming requires extra steps and/or CSS Custom Props
+              </li>
+            </ul>
+            <h4>Atomic as an Output:</h4>
+            <ul class="iconlist">
+              <li class="sac good">
+                Fantastic specificity handling! Everything is (0,X,0)
+              </li>
+
+              <li class="flex good">Can coincide with 3rd party libraries.</li>
+              <li class="flex bad">
+                Hard to share atomically styled components across an
+                organization unless they too are doing atomic.
+              </li>
+              <li class="size good">
+                Amazing!!! Far and away the best output for size!
+              </li>
+            </ul>
           </section>
         </section>
       </div>
