--- a/index.html
+++ b/index.html
@@ -898,7 +898,8 @@ const shadow = shadowTarget.attachShadow({ mode: "open" });
             <h4>Atomic as an Output:</h4>
             <ul class="iconlist">
               <li class="sac good">
-                Fantastic specificity handling! Everything is (0,X,0)
+                Fantastic specificity handling! Only relevant classes are ever
+                applied.
               </li>
 
               <li class="flex good">Can coincide with 3rd party libraries.</li>
